# artemarket

./: .gitignore  DEPLOY.md  README.md  package-lock.json  start.sh
backend/: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: bet.py  bet_card.py  user.py
backend/app/routers/: auth.py  bet_cards.py  bets.py  users.py
backend/app/schemas/: auth.py  bet.py  bet_card.py  user.py
backend/app/services/: auth_service.py  bet_service.py  scheduler.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  theme.ts
frontend/src/api/: auth.ts  betCards.ts  bets.ts  client.ts  users.ts
frontend/src/components/bet/: BetAmountDialog.tsx  BetCard.tsx  BetCardStack.tsx  CreateBetCardDialog.tsx  ResolveBetDialog.tsx  SwipeHint.tsx
frontend/src/components/layout/: AppShell.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useBetCards.ts  useLeaderboard.ts  useSwipe.ts  useUserStats.ts  useUsers.ts
frontend/src/pages/: AdminPage.tsx  ChartsPage.tsx  LeaderboardPage.tsx  LoginPage.tsx  StatsPage.tsx  SwipePage.tsx
frontend/src/types/: index.ts
